# tgp-rust

./: Cargo.toml  LICENSE  README.md  custom-type.js  what-is-tgp.md
dead_code/: plugins.rs
dead_code/common/: iterator.rs  pipe.rs  test.rs
macro/: Cargo.toml  lib.rs  tgp_macro.rs
plugins/: Cargo.toml  lib.rs  main.rs
plugins/common/: iterator.rs  mod.rs  pipe.rs
plugins/core/: comp.rs  json.rs  mod.rs  rt.rs  tester.rs  tgp.rs  xx.r
plugins/data_flow/: flow.rs  interperter.rs  mod.rs
plugins/data_model/: data-model.rs
plugins/examples/: calculator.rs
plugins/wgpu/: hello-compute.rs  hello.rs
projects/tgp-test/: main.rs
tgp_macro/: Cargo.toml  lib.rs  parse_tgp_val.rs  tgp_parse.rs
tgp_macro/bootstrap_tgp/: comp1.rs  json.rs  mod.rs  tgp1.rs
tgp_parse/: Cargo.toml  tgp_parse.rs
