cargo-features = ["edition2024"]

[package]
name = "test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "projects/tgp-test/main.rs"
path1 = "plugins/wgpu/hello-compute.rs"

[dependencies]
tgp = { path = "./plugins" }
ctor = "0.1.22"
lazy_static = "1.4"
tgp_macro = { path = "./tgp_macro" }
