cargo-features = ["edition2024"]

[package]
name = "tgp"
version = "0.1.0"
edition = "2024"

[lib]
path= "./lib.rs"

[dependencies]
tgp_macro = { path = "../macro" }
lazy_static = "1.4"
maplit = "1.0.2"
once_cell = "1.8.0"
ctor = "0.1.22"
serde_json = "1.0"
paste = "1.0"
proc-macro2 = "1.0.82"
wgpu = "0.20.0"
log = "0.4.21"
env_logger = "0.11.3"
pollster = "0.3.0"
bytemuck = "1.15.0"
flume = "0.11.0"
getrandom = "0.2.14"
syn = "2.0.61"
quote = "1.0.36"
litrs = "0.4.1"
