cargo-features = ["edition2024"]

[package]
name = "tgp_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro=true
path= "./lib.rs"

[dependencies]
lazy_static = "1.4"
paste = "1.0"
proc-macro2 = "1.0.82"
syn = { version = "2.0.61", features = ["full"] }
quote = "1.0.36"
litrs = "0.4.1"
once_cell = "1.19.0"

